--- a/action.yml
+++ b/action.yml
@@ -28,7 +28,7 @@ inputs:
     required: true
 runs:
   using: 'docker'
-  image: 'docker://ghcr.io/ionos-deploy-now/deploy-to-ionos:v1.0.2'
+  image: 'docker://ghcr.io/ionos-deploy-now/deploy-to-ionos:feature-pre-and-post-remote-commands'
   env:
     SERVICE_HOST: ${{ inputs.service-host }}
     API_KEY: ${{ inputs.api-key }}
